# ocaml-sedap

./: Makefile  dune  dune-project  package-lock.json  sedap.opam  sedap.opam.template  sedap.schema.json
scripts/: gen_protocol.js  gen_protocol_ml.js  gen_protocol_mli.js
src/debug_protocol/: debug_protocol.ml  debug_protocol.mli  dune
src/sedap_rpc/: sedap_rpc.ml
src/sedap_types/: dune  sedap_types.ml  sedap_types.mli  sedap_types_static.ml  utils.ml
